fixed horizontal scrolling bug

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
    font-weight: 400;
 } /*Finish reset*/
 .header {
-   position: static;
+   position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
@@ -89,8 +89,8 @@ h1, h2, h3, h4, h5, h6 {
    display: flex;
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
+   height: 50px;
    background-color: rgb(255, 227, 87);
-   padding: 8px;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
@@ -116,6 +116,7 @@ h1, h2, h3, h4, h5, h6 {
    display: -ms-flexbox;
    display: flex;
    height: 70px;
+   width: 100%;
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
    -webkit-box-align: center;
@@ -167,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
    height: 65px;
    font-size: 17px;
    padding-top: 25px;
-   margin-right: 8%;
+   margin-right: 18%;
    cursor: pointer;
 }
 .header__elements .elements__values:hover {
@@ -197,13 +198,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main {
-   position: static;
-   height: 200%;
+   position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
-   -ms-flex-preferred-size: 100%;
-       flex-basis: 100%;
+   width: 100%;
+   height: auto;
+   -ms-flex-wrap: wrap;
+       flex-wrap: wrap;
    font-size: 40px;
    background-color: #ffffff;
 }
@@ -226,7 +228,6 @@ h1, h2, h3, h4, h5, h6 {
        -ms-flex-pack: center;
            justify-content: center;
 }
-
 .cookie {
    visibility: hidden;
    position: absolute;
